<resources>
    <string name="app_name">VetCare-MobileApp</string>
    <string name="call_ambulance">Llamar Ambulancia</string>
    <string name="emergency">Emergencia</string>
    <string name="delivery_medicamento">Delivery Medicamento</string>
    <string name="llamar_veterinario">Llamar Veterinario</string>
    <string name="nombrecompleto">nombrecompleto</string>
    <string name="numero">Numero</string>
    <string name="gmail">Gmail</string>
    <string name="rol">Rol</string>
    <string name="mascota">Mascota</string>
    <string name="nombre_mas">Nombre Mas.</string>
    <string name="cuenta_basica">cuenta_basica</string>
    <string name="llamar_ambulancia">Llamar Ambulancia</string>
    <string name="que_desea_realizar_hoy">Que desea realizar hoy ?</string>
    <string name="ubica_tu_veterinario">Ubica tu veterinario</string>
    <string name="consultas_medicas">Consultas Medicas</string>
    <string name="consejos_del_veterinario">Consejos del Veterinario</string>
    <string name="emergencia">Emergencia</string>
    <string name="tienda_de_juguetes">Tienda</string>
    <string name="foro_comunitario">Foro Comunitario</string>
    <string name="escribe_el_tema">Escribe el tema</string>
    <string name="escribe_el_tema_que_quieras_buscar">Escribe el tema que quieras buscar</string>
    <string name="agregar_a_favoritos">Agregar a favoritos</string>
    <string name="eliminar">Eliminar</string>
    <string name="advice">Consejos para el Cuidado</string>
    <string name="agregar_a_carrito">Agregar al carrito</string>
    <string name="precio">Precio:</string>
    <string name="descripci_n">Descripción:</string>
    <string name="stock">Stock:</string>
    <string name="cart">Cart</string>
    <string name="clear_filters">Clear\n</string>
    <string name="add_product">Add product</string>
    <string name="guardar">Guardar</string>
    <string name="raza">Raza</string>
    <string name="reservar_cita">Reservar cita</string>
    <string name="mis_citas">Mis citas</string>
    <string name="asistencia">Asistencia</string>
    <string name="faq">FAQ</string>
    <string name="citas_y_consultas">Citas y consultas</string>
    <string name="agendar_cita">Texto para Agendar Cita</string>
    <string name="email">email</string>
    <string name="nombre_de_mascota">nombre_de_mascota</string>
    <string name="apellido">apellido</string>
    <string name="nombre">nombre</string>
    <string name="forum">Forum</string>
    <string name="destacado">Destacado</string>
    <string name="reciente">Reciente</string>
    <string name="nuevo">Nuevo</string>
    <string name="date">Date</string>
    <string name="contenido">Contenido</string>
    <string name="autor">Autor</string>
    <string name="publicar">Publicar</string>
    <string name="perfil_de_mascota">Perfil de Mascota</string>
    <string name="upload_image">Upload Image</string>
    <string name="agregar_publicacion">Agregar Publicacion</string>
    <string name="title">title</string>
    <string name="content">content</string>
    <string name="author">author</string>
    <string name="post_title">Title</string>
    <string name="post_content">Content</string>
    <string name="post_submit">Submit</string>
    <string name="perfil_mascota">Perfil mascota</string>
    <string name="name">Name</string>
    <string name="correo">Correo</string>
    <string name="agregar_producto">Agregar Producto</string>
    <string name="guardar_mascota">Guardar mascota</string>
    <string name="raza_mascota">raza mascota</string>
    <string name="nombre_mascota">nombre mascota</string>
    <string name="peso_mascota">peso mascota</string>
    <string name="tipo_mascota">tipo mascota</string>
    <string name="url_imagen_mascota">Url imagen mascota</string>
    <string name="enviar">Enviar</string>
    <string name="ingrese_su_consulta">Ingrese su consulta</string>
    <string name="asistencia_usuario">Asistencia usuario</string>
</resources>