<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/btVet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ForumActivity">

    <TextView
        android:id="@+id/tvForum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/forum"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.019" />

    <Button
        android:id="@+id/btDestacado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/destacado"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.088"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.152" />

    <Button
        android:id="@+id/btReciente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/reciente"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btDestacado"
        app:layout_constraintTop_toBottomOf="@+id/tvForum"
        app:layout_constraintVertical_bias="0.036" />

    <Button
        android:id="@+id/btNuevo"
        android:layout_width="103dp"
        android:layout_height="48dp"
        android:text="@string/nuevo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toEndOf="@+id/btReciente"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.152" />

    <ListView
        android:id="@+id/lvTopics"
        android:layout_width="409dp"
        android:layout_height="577dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="152dp" />

</androidx.constraintlayout.widget.ConstraintLayout>